# mono-rail

./: .gitignore  Cargo.toml  app.proto  docker-compose.yml  schema.sql
.moon/: workspace.yml
apps/auth-app/: Cargo.toml  moon.yml
apps/auth-app/src/: main.rs
apps/auth-app/src/api/grpc/: auth_controller.rs
apps/core-backend/: Cargo.toml  moon.yml
apps/http-gateway/: Cargo.toml  moon.yml
apps/http-gateway/src/: app_state.rs  di.rs  http_router.rs  main.rs
apps/libs/user-lib/: Cargo.toml  moon.yml
libs/auth-lib/: Cargo.toml  moon.yml
libs/auth-lib/src/: app_state.rs  lib.rs
libs/auth-lib/src/api/: mod.rs
libs/auth-lib/src/api/rest/: auth_controller.rs  mod.rs
libs/auth-lib/src/domain/: mod.rs
libs/auth-lib/src/domain/dto/: login_user_dto.rs  mod.rs  register_user_dto.rs
libs/auth-lib/src/domain/entity/: mod.rs  user.rs
libs/auth-lib/src/domain/ports/: crypto_port.rs  get_user_port.rs  mod.rs  token_port.rs
libs/auth-lib/src/domain/use_case/: login_user.rs  mod.rs  register_user.rs
libs/auth-lib/src/persistence/: bcrypt_crypto_service.rs  jwt_token_service.rs  mod.rs  postgres_user_repository.rs
libs/config-lib/: Cargo.toml  moon.yml
libs/config-lib/src/: lib.rs
libs/db-lib/: Cargo.toml  moon.yml
libs/db-lib/src/: lib.rs
libs/grpc-lib/: Cargo.toml  buf.gen.yaml  buf.yaml  moon.yml
libs/grpc-lib/proto/auth/v1/: auth.proto
libs/grpc-lib/src/: lib.rs
libs/user-lib/: Cargo.toml
libs/user-lib/src/: lib.rs
libs/user-lib/src/domain/: mod.rs
libs/user-lib/src/domain/entity/: user.rs
libs/user-lib/src/persistence/: postgres_user_repository.rs
templates/rust-lib/: Cargo.toml.tera  moon.yml.tera  template.yml
templates/rust-service/: moon.yml.tera  template.yml
(+1 files in other folders)
