[package]
name = "auth-app"
version = "0.1.0"
edition = "2021"

[dependencies]
auth-lib   = { path = "../../libs/auth-lib" }
config-lib = { path = "../../libs/config-lib" }
db-lib     = { path = "../../libs/db-lib" }
grpc-lib   = { path = "../../libs/grpc-lib" }
user-lib   = { path = "../../libs/user-lib" }
tokio      = { version = "1", features = ["full"] }
tonic      = "0.14"
