# Cargo.toml.tera
[package]
name = "http-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = "0.3.23"
config-lib = { path = "../../libs/config-lib" }
auth-lib = { path = "../../libs/auth-lib" }
