# Cargo.toml.tera
[package]
name = "http-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
auth-lib   = { path = "../../libs/auth-lib" }
axum       = "0.8.9"
config-lib = { path = "../../libs/config-lib" }
db-lib     = { path = "../../libs/db-lib" }
serde      = { version = "1", features = ["derive"] }
tokio      = { version = "1", features = ["full"] }
tracing    = "0.1"
tracing-subscriber = "0.3.23"
