# Cargo.toml.tera
[package]
name = "auth-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.8.9"
bcrypt = "0.15"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "macros"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
